--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
  <div class="login">
-	<h1>Match Maker</h1>
+	<h1>Match Maker prediction</h1>
 
      <!-- Form to enter new data for predictions  -->
     <form action="/match.html" method="POST">
