--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Match maker CHANGED</title>
+  <title>Match maker</title>
   <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
 <link href='https://fonts.googleapis.com/css?family=Arimo' rel='stylesheet' type='text/css'>
 <link href='https://fonts.googleapis.com/css?family=Hind:300' rel='stylesheet' type='text/css'>
@@ -13,25 +13,13 @@
 
 <body>
  <div class="login">
-	<h1>Match Maker prediction</h1>
+	<h1>WEEK 4 Challenge </h1>
 
-     <!-- Form to enter new data for predictions  -->
-    <form action="/match.html" method="POST">
-      <input type="text" name="age" placeholder="Age" required="required" /><br>
-    	<input type="text" name="sex" placeholder="Sex" required="required" /><br>
-        <input type="text" name="height" placeholder="Height" required="required" /><br>
-        <input type="text" name="location" placeholder="location" required="required" /><br>
-        <input type="text" name="dd" placeholder="Education" required="required" /><br>
-
-
-        <button type="submit" class="btn btn-primary btn-block btn-large">Predict</button>
-
-    </form>
-
-
+     <h2> Architectural Diagram </h2>
+ <img src="architectural.png" alt="Architectural Diagram" class="center">
    <br>
    <br>
-  
+
    
  </div>
 
